# server.js
@@ -14,6 +14,7 @@ const moment = require('moment');
 const Utils = require("./utils/utils");
 const Fornecedor = require("./db/Fornecedor");
 const { db } = require("./db/Contrato");
+const { ObjectId } = require("mongodb");
 var CronJob = require('cron').CronJob;
 
 
@@ -405,147 +406,45 @@ var getProposta = function (req, res, next) {
 		res.json(data);
 	})
 };
-
-var createFornecedor = function (req, res, next) {
-
-	axios.post('https://prjqualivida.mxmwebmanager.com.brapi/InterfacedoFornecedor/Gravar', {
-		AutheticationToken: {
-			Username: "TESTEAPI.QUA",
-			Password: "TST90",
-			EnvironmentName: "QUALIVIDAPROJ"
-		},
-		Data: {
-			InterfacedoFornecedor: [
-				{
-					SequenciadoRegistro: data.subcontrato.id,
-					Codigo: "14270428000169",
-					TipodePessoa: "J",
-					CPFouCNPJ: "14270428000169",
-					Nome: "Fornecedor Belem",
-					NomeFantansia: "Fornecedor Belem",
-					TipodoLocaldoIndicadordeInscricaoEstadual: "1",
-					Inscricao: "26825520",
-					InscricaoMunicicipal: "",
-					InscricaoSuframa: "",
-					FornecedorERural: "N",
-					Cooperativa: "N",
-					InscricaonoINSS: "",
-					ClassenoINSS: "12",
-					TetoMaximonoINSS: "",
-					SalarioBase: "",
-					PisPasep: "",
-					QuantidadedeDependente: "0",
-					CodigoBrasileirodeOcupacao: "",
-					DatadeNascimento: "26051999",
-					EstadoCivil: "C",
-					Nacionalidade: "BRA",
-					CodigodoPais: "BRA",
-					Pais: "Brasil",
-					Cep: "20040-901",
-					Endereco: "Endereço fornecedor",
-					NumerodoEndereco: "500",
-					ComplementodoEndereco: "Quadra 1345",
-					Bairro: "Centro",
-					CodigodaCidade: "3300605",
-					Cidade: "Rio de Janeiro",
-					Uf: "RJ",
-					Telefone: "99999-9999",
-					Email: "joaoemaria@bol.en.br",
-					Ativo: "A",
-					Homologado: "S",
-					InformacaoesComplementares: "N",
-					InterfaceContaCorrentedoFornecedor: [
-						{
-							CodigodoFornecedor: "14270428000169",
-							CodigodaContaCorrente: "012",
-							CodigodoBanco: "341",
-							NomedoBanco: "itau",
-							AgenciadoBanco: "0740",
-							NomedaAgencia: "Tutoia",
-							EnderecodaAgencia: "Rua Tutoia, 300",
-							BairrodaAgencia: "Paraiso",
-							CidadedaAgencia: "Sao Paulo",
-							UFdaAgencia: "SP",
-							CepdaAgencia: "04311-080",
-							NumerodaContaBancaria: "62533-9",
-							TipodeConta: "C",
-							StatusdaConta: "A",
-							IndicadordeContaPrincipal: "S"
-						}
-					],
-					InterfaceFornecedorContabil: [
-						{
-							SequenciadoFornecedorContabil: 1,
-							CodigoFornecedor: "14270428000169",
-							CodigoEmpresa: "001",
-							CodigoFilial: "00",
-							CodigoMoeda: "BRL",
-							NumeroContaContabil: "",
-							NumeroContaContabilAntecipacao: "",
-							InterfacedoFornecedorGrupoPagamento: [
-								{
-									SequenciadoFornecedorGrupoPagamento: "1",
-									CodigoFornecedor: "14270428000169",
-									CodigoEmpresa: "001",
-									CodigoFilial: "00",
-									CodigoMoeda: "BRL",
-									CodigoGrupoPagamento: "201.2",
-									CodigoImpostoIR: "",
-									CodigoImpostoINSS: "",
-									CodigoImpostoISS: "",
-									CodigoImpostoPIS: "",
-									CodigoImpostoCOFINS: "",
-									CodigoImpostoContribuicaoSocial: "",
-									CodigoImpostoINSSI: "",
-									CodigoImpostoSEST: "",
-									IdentificadorTipoServico: "1",
-									CodigoAtividadeEconomica: "2"
-								}
-							]
-						}
-					],
-					InterfaceFornecedorBeneficiario: [
-						{
-							CodigodoFornecedor: "14270428000169",
-							CodigodoBeneficiario: "95318356087",
-							CodigodoTipodeRelacionamento: "3"
-						}
-					],
-					InterfaceFornecedorHistorico: [
-						{
-							CodigodoFornecedor: "14270428000169",
-							DatadaOcorrencia: "10/10/19",
-							Historico: "Teste de Historico de fornecedor",
-							TipoOcorrencia: "01"
-						}
-					],
-					InterfaceFornecedorInformacoesComplementares: [
-						{
-							InscricaoEstadualdoParticipante: "",
-							InscricaonoINSSdoParticipante: "",
-							NumerodeIdentificacaodoTrabalhador: "",
-							NumerodaNaturezadaRetencao: "",
-							CodigoTipodeAssinante: "",
-							ClassificacaonoSimplesNacional: "",
-							TipodoClienteServicodeComunicacao: "",
-							TipodePessoaEstrangeira: "",
-							NIFFornecedorEstrangeiro: "",
-							BeneficiarodeRendimentonoExterior: "",
-							BeneficiarioDispensadodoNIF: "",
-							PaisNaoExigeNIF: ""
-						}
-					]
-				}
-			]
-		}
-	}).then(resp => {
-		res.json({ "resposta Servidor MXM": resp.data.Messages[0], "Dados Enviados": JSON.parse(resp.config.data), "Processo :": resp.data.Data });
+var getFornecedor = function (req, res, next) {
+	let fornecedor = parseInt(req.params.idFornecedor)
+		Fornecedor.find({}).then(resp => {
+		res.json(resp);
 	})
 };
-//joao
+var putFornecedor = function (req, res, next) {
+	
+	let idFornecedor = ObjectId(req.params.id)
+	let fornecedor = req.body
+	Fornecedor.updateOne(
+			{
+				_id:idFornecedor
+			},
+			{
+				$set:{
+					
+					cnpj:parseInt(fornecedor.cnpj),
+					nome:fornecedor.nome,
+					razaoSocial:fornecedor.razaoSocial,
+					possuiSupervisor:fornecedor.possuiSupervisor,
+					codigo:fornecedor.codigo,
+					email:fornecedor.email,
+					indAtivo:fornecedor.indAtivo,
+					indLiberacaoColaborador:fornecedor.indLiberacaoColaborador
+					
+			}
+			}
+		)
+		.then(resp =>{
+		res.json(resp);
+	})
+	
+};
+
+
 var createFornecedor = function (req, res) {
-	let id = req.params.idFornecedor;
-	Fornecedor.findById({id: id}).then(data =>{
+	let idFornecedor = ObjectId(req.params.idFornecedor);
+	Fornecedor.findById({_id: id}).then(data =>{
 		axios.post('https://prjqualivida.mxmwebmanager.com.brapi/InterfacedoFornecedor/Gravar', {
 			AutheticationToken: {
 				Username: "TESTEAPI.QUA",
@@ -679,18 +578,13 @@ var createFornecedor = function (req, res) {
 		}).then(resp => {
 			res.json({ "resposta Servidor MXM": resp.data.Messages[0], "Dados Enviados": JSON.parse(resp.config.data), "Processo :": resp.data.Data });
 		})
+		
 	})
-	
-
 }
-var putFornecedor = function (req, res) {
-	let id = req.params.idFornecedor;
-	//Fornecedor.updateOne({idFornecedor: idFornecedor, db});
-	db.mensage.updateOne({_id:ObjectId("5f89e7c90a6e343ac41db05e")},{$set:{"titular.nome":"Pedro"}},{$set:{}},{$set:{}})
 
 
-	
-}	
+
+
 
 
 
@@ -699,6 +593,12 @@ var putFornecedor = function (req, res) {
 router.route('/contrato_beneficiario')
 	.post(createContrato)
 	.get(getFindContrato);
+//getFornecedor
+router.route('/contrato_beneficiario/fornecedor')
+	.get(getFornecedor);
+//putFornecedor
+router.route('/contrato_beneficiario/:id/putfornecedor')
+	.put(putFornecedor);
 
 router.route('/contrato_beneficiario/:id')
 	.get(getFindByIDContrato);
@@ -722,7 +622,7 @@ router.route('/contrato_beneficiario/:carteirinha/carteirinha')
 
 router.route('/contrato_beneficiario/:idFornecedor/fornecedor')
 	.post(createFornecedor);
-
+	
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use('/api/v1', router);
